
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 FEB 12a
   * in model/share/fluid_share.c
     - added condition_Lambda_plus_minus_Parent2()


2019 FEB 11a
   * in cycle/resconv/_MUSCL+/resconv.hh and cycle/resconv/_MUSCL/resconv.hh
     - changed PARENT [parent2018a] to PASCAL [parent2018a]
   * in cycle/resconv/_MUSCL/resconv.c
     - added EIGENVALCOND_PARENT
   * in cycle/share/res_share.h
     - added EIGENVALCOND_PARENT
   * in model/share/fluid_share.c
     - renamed condition_Lambda_plus_minus_Parent() to condition_Lambda_plus_minus_Pascal() 
     - added new condition_Lambda_plus_minus_Parent()


2019 FEB 10a
   * renamed
     - EIGENVALCOND_PARENT -> EIGENVALCOND_PASCAL


2019 FEB 08c
   * in bin 
     - added Pstag.eqn
     - improved cylinder_in_freestream.wrp


2019 FEB 08b
   * in bin
     - modified eigenvalue conditioning parameters in carbuncle.wrp, forward_step.wrp, impinge.wrp


2019 FEB 08a
   * in model/thermo/_generic/thermo.c
     - in _dsk_dT_from_T(), now do not output an error if _CHEM_SET_TE_TO_T_FOR_ARRHENIUS_REACTIONS is defined


2019 FEB 07b
   * in lib/gridg/2Dbase.c and lib/gridg/3Dbase.c
     - renamed JoinPlanes to JoinFaces
   * in model/chem
     - added _Air_Plasma_12s_59r_Dunn-Kang-Macheret
   * in model/thermo/_generic/thermo.c
     - in _sk_from_T(), now do not output an error if _CHEM_SET_TE_TO_T_FOR_ARRHENIUS_REACTIONS is defined
     - in _muk_from_N_Tk_Ek(), added mobilities for NO+, N+, O+
   * in model/chem/doc/report.tex
     - fixed a mistake in one reaction for the Dunn-Kang model: NO- should be NO+


2019 FEB 07a
   * in cycle/resconv/_none/resconv.c
     - in read_disc_resconv_actions(), added gl->cycle.resconv.CONVJACOBIAN=CONVJACOBIAN_NONE
   * in cycle/resconv/_none/resconv.hh
     - in gl_cycle_resconv_t added CONVJACOBIAN
   
