@@ -7,7 +7,7 @@ Rgas=286.0;
 rhoref=1;
 aref=300;
 
-Mx=4.0;
+Mx=20.0;
 My=0.0;
 P=10200;
 T=300;
@@ -212,16 +212,16 @@ Init(
 
 Disc(
   NavierStokesPerfect(
-    zetaA1=0.01e0;    {conditions the eigenvalue of the A jacobian}
-    zetaA2=0.02e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
+    zetaA1=0.02e0;    {conditions the eigenvalue of the A jacobian}
+    zetaA2=0.01e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   MUSCL(
     FLUX=FLUX_FDS;
     AVERAGING=AVERAGING_ROE;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
     AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.9999;
-    INTERPOL=INTERPOL_AOWENO7;
+    AOWENO_gammahi=0.95;
+    INTERPOL=INTERPOL_AOWENO5;
     EIGENVALCOND=EIGENVALCOND_PARENT; 
     POSFILTER=POSFILTER_PARENT;
     POSFILTER_numiter=4;
